<resources>
    <string name="app_name">PersonagensStarWars</string>
    <string name="titulo">Personagens Star Wars</string>
    <string name="luke">Luke Skywalker</string>
    <string name="anakin">Anakin Skywalker</string>
    <string name="texto_luke">Luke Skywalker is a main character in the Star Wars franchise. He was the protagonist of the original trilogy and one of the secondary protagonists in the sequel trilogy. Finding himself apprenticed to the Jedi Masters, Obi-Wan Kenobi and Yoda, he soon becomes an important figure in the Rebel Alliance's struggle against the Galactic Empire. In The Force Awakens, he is the Grand Master of the New Jedi Order and the sole existing Jedi until in The Last Jedi, his new apprentice, Rey, assumes the mantle after his death.</string>
    <string name="texto_anakin">Anakin was a legendary Force-user who served the Galactic Republic as a Jedi Knight, and later served the Galactic Empire as a Sith Lord. He was the son of Shmi Skywalker, later in life he became the secret husband of Padmé Amidala, and the father of Luke Skywalker and Leia Organa. After his fall to the Dark side, he became the Sith Lord Darth Vader.</string>
    <string name="rd">R2D2</string>
    <string name="akbar">Akbar</string>
    <string name="boba">Boba Fetch</string>
    <string name="chewie">Chewie</string>
    <string name="cpo">C3PO</string>
    <string name="jar_jar">Jar Jar Binks</string>
    <string name="obi_wan">Obi Wan Kenobi</string>
    <string name="leia">Leia Skywalker</string>
    <string name="padme">Padme</string>
    <string name="stormtrooper">Stormtrooper</string>
    <string name="vader">Dath Vader</string>
    <string name="yoda">Yoda</string>
</resources>

